examples/datalog/15_arithmetic/25_parentheses.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_parens
Knowledge graph 'test_parens' created.
Switched to knowledge graph: test_parens
> .kg use test_parens
Switched to knowledge graph: test_parens
> +nums[(2,), (3,), (4,)].
Inserted 3 fact(s) into 'nums'.
> expr1(X, Y) :- nums(X), Y = X + 2 * 3.
Script error: Query execution failed: Unsafe rule: Atom { relation: "expr1", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
